# showmebug

./: .gitignore  CMakeLists.txt  README.md  commit.sh  run.sh
scripts/: commit.sh  lc  problem.sh
src/: main.cpp  solution.hpp
templates/src/: main.cpp  solution.hpp
